--- a/story.html
+++ b/story.html
@@ -7,5 +7,5 @@
   <link rel="stylesheet" type="text/css" href="midterm-1.css">
 </head>
 <div class="container">
- 
+  <h1>  Media Watchdog Spokesman Sought On Embezzlement Charges </h1>
 </div>
