reset page title

--- a/story.html
+++ b/story.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Midterm 1</title>
+    <title>Media Watchdog Spokesman Sought On Embezzlement Charges</title>
   <link rel="stylesheet" type="text/css" href="https://yarnpkg.com/en/package/normalize.css">
   <link rel="stylesheet" type="text/css" href="midterm-1.css">
 </head>
