--- a/story.html
+++ b/story.html
@@ -8,5 +8,5 @@
 </head>
 <div class="container">
   <h1>  Media Watchdog Spokesman Sought On Embezzlement Charges </h1>
-  <p class="byline"> By Onion Staff </p>
+  <p class="byline"> <strong> By Onion Staff </strong> </p>
 </div>
