--- a/story.html
+++ b/story.html
@@ -9,4 +9,5 @@
 <div class="container">
   <h1>  Media Watchdog Spokesman Sought On Embezzlement Charges </h1>
   <p class="byline"> <strong> By Onion Staff </strong> </p>
+  <p class="publish time"> Published June 24, 2011 </p>
 </div>
