--- a/story.html
+++ b/story.html
@@ -8,6 +8,7 @@
 </head>
 <div class="container">
   <h1>  Media Watchdog Spokesman Sought On Embezzlement Charges </h1>
+  <img src="http://i.onionstatic.com/onion/1560/4/16x9/600.jpg">
   <p class="byline"> <strong> By Onion Staff </strong> </p>
   <p class="publish time"> <em> Published June 24, 2011 </em> </p>
 
