created article id

--- a/story.html
+++ b/story.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="midterm-1.css">
 </head>
 <div class="container">
+<div id="article">
   <h1>  Media Watchdog Spokesman Sought On Embezzlement Charges </h1>
   <img src="http://i.onionstatic.com/onion/1560/4/16x9/600.jpg">
   <p class="byline"> <strong> By Onion Staff </strong> </p>
@@ -22,5 +23,5 @@
 
 <p>At press time, security cameras at <a href="http://www.flylax.com" target="_blank"> Los Angeles International Airport </a> captured an image of a figure resembling Forbeck boarding a flight to <a class="wiki-link"> <a href="https://en.wikipedia.org/wiki/Barbados" target="_blank">Barbados</a></a>.</p>
 </div>
-
+</div>
 </div>
