created container div

--- a/author.html
+++ b/author.html
@@ -6,3 +6,8 @@
 <link rel="stylesheet" type="text/css" href="https://yarnpkg.com/en/package/normalize.css">
 <link rel="stylesheet" type="text/css" href="midterm-1.css">
 </head>
+
+<div class="container">
+
+
+</div>
