linked style.css to author and story pages

--- a/author.html
+++ b/author.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Bob Woodward author profile</title>
 <link rel="stylesheet" type="text/css" href="https://yarnpkg.com/en/package/normalize.css">
-<link rel="stylesheet" type="text/css" href="midterm-1.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <div class="container">
