--- a/story.html
+++ b/story.html
@@ -19,9 +19,10 @@
 
 <p>The office, aside from a dozen phones and random sheets of paper strewn across the floor, was completely deserted prior to the FBI raid.</p>
 
-<p>“Mr. Forbeck remains at-large at this time. And we’d like to inform all media organizations, especially desperate ones, that as impressive as Mr. Forbeck’s credentials sound, there is no such thing as a J.D. in Journalism Award Giving and Award Law.”<p>
+<div class="pull-quote"> <p>“Mr. Forbeck remains at-large at this time. And we’d like to inform all media organizations, especially desperate ones, that as impressive as Mr. Forbeck’s credentials sound, there is no such thing as a J.D. in Journalism Award Giving and Award Law.”<p>
+</div>
 
-<p>At press time, security cameras at <a href="http://www.flylax.com" target="_blank"> Los Angeles International Airport </a> captured an image of a figure resembling Forbeck boarding a flight to <a class="wiki-link"> <a href="https://en.wikipedia.org/wiki/Barbados" target="_blank">Barbados</a></a>.</p>
+<div class="final-paragraph"><p>At press time, security cameras at <a href="http://www.flylax.com" target="_blank"> Los Angeles International Airport </a> captured an image of a figure resembling Forbeck boarding a flight to <a class="wiki-link"> <a href="https://en.wikipedia.org/wiki/Barbados" target="_blank">Barbados</a></a>.</p> </div>
 </div>
 </div>
 </div>
